--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -12,8 +12,8 @@
 body {
   font-family: var(--font-bogle), sans-serif; /* Fallback to sans-serif */
 
-  /* color: #081c2f; */
-  /* color: #0d2e4c; */
+  /* color: #30e390; */
+  /* color: #42eb50; */
 }
 
 @layer base {
